--- a/src/main/resources/static/home.css
+++ b/src/main/resources/static/home.css
@@ -14,7 +14,7 @@ body{
 .nav.nav-pills > li.active > a:hover,
 .nav.nav-pills > li.active > a:focus {
     color: #fff !important;
-    background-color: #2ECC71 !important;
+    background-color: #007b5e !important;
 
 }
 
