login bug resolved

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,9 +5,9 @@
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<!------ Include the above in your HEAD tag ---------->
-	<link rel="stylesheet" href="login.css">
+	<link rel="stylesheet" href="css/login.css">
 	<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Login</title>
 </head>
 <body>
 
@@ -21,9 +21,9 @@
 	    </div>
 	
 	    <!-- Login Form -->
-	    <form>
-	      <input type="text" id="login" class="fadeIn second" name="login" placeholder="login">
-	      <input type="text" id="password" class="fadeIn third" name="login" placeholder="password">
+	    <form th:action="@{/login}" method="POST">
+	      <input type="text" class="fadeIn second" name="username" placeholder="Username">
+	      <input type="text" class="fadeIn third" name="password" placeholder="Password">
 	      <input type="submit" class="fadeIn fourth" value="Log In">
 	    </form>
 	
