--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-	<link rel="stylesheet" href="home.css">
-	<link rel="stylesheet" href="footer.css">
+	<link rel="stylesheet" href="css/home.css">
+	<link rel="stylesheet" href="css/footer.css">
 	<meta charset="ISO-8859-1">
 	<title>Insert title here</title>
 
