--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,7 +5,7 @@
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<!------ Include the above in your HEAD tag ---------->
-	<link rel="stylesheet" href="register.css">
+	<link rel="stylesheet" href="css/register.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Insert title here</title>
 </head>
