--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,7 +23,7 @@
 	    <!-- Login Form -->
 	    <form th:action="@{/login}" method="POST">
 	      <input type="text" class="fadeIn second" name="username" placeholder="Username">
-	      <input type="text" class="fadeIn third" name="password" placeholder="Password">
+	      <input type="password" class="fadeIn third" name="password" placeholder="Password">
 	      <input type="submit" class="fadeIn fourth" value="Log In">
 	    </form>
 	
