--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,16 +2,16 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<link rel="stylesheet" href="css/home.css">
-	<link rel="stylesheet" href="css/footer.css">
+	<link rel="stylesheet" href="css/footer2.css">
 	<meta charset="ISO-8859-1">
 	<title>Insert title here</title>
 
-    <title>contact management people directory - Bootdey.com</title>
+    <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-	<script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	
+        
+		
 </head>
 <body>
 
@@ -39,7 +39,7 @@
 								</a>
 							</li>
 							<li>
-								<a href="#">
+								<a th:href="@{/addContact}">
 									Add Contact
 									<span class="badge pull-right">87</span>
 								</a>
@@ -266,7 +266,7 @@
 								class="fa fa-envelope"></i></a></li>
 					</ul>
 				</div>
-				<hr>
+				
 			</div>
 			<div class="row">
 				<div
@@ -277,7 +277,7 @@
 							Rahaman</a>
 					</p>
 				</div>
-				<hr>
+				
 			</div>
 		</div>
 	</section>
