--- a/src/main/resources/templates/add-contact.html
+++ b/src/main/resources/templates/add-contact.html
@@ -1,27 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/footer.css">
-	
-	
 	<link rel="stylesheet" href="css/home.css">
-	
-	
+	<link rel="stylesheet" href="css/footer2.css">
+	<meta charset="ISO-8859-1">
+	<title>Insert title here</title>
+
+    <title>Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <link href="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-	
-	
+        
 		
-	<title>Add contact</title>
 </head>
 <body>
-	
+
 	<br><br>
 	<div class="container" align="center"  >
 		<div class="card2" >
@@ -32,14 +25,11 @@
 			</div>
 		</div>
 	</div>
-	
 	<div class="container">
-        <div class="row">
-
-            <div class="col mt-3 justify-content-right">
-            	<div class="page-people-directory">
-				
-				<div class="col-md-3">
+		<div class="col-md-12">
+			<div class="page-people-directory">
+				<div class="row">
+					<div class="col-md-3">
 						<h5 class="page-title"><b>Contacts</b></h5>
 						<ul class="nav nav-pills nav-stacked nav-contacts">
 							<li class="active">
@@ -113,68 +103,91 @@
 						</div>
 						
 					</div>
-					
-					</div>
-				
-				
-				
-				
-                <form th:action="@{/addContact}" th:object="${newContact}" method="post" enctype="multipart/form-data">
-                    <div class="form-row">
-                        
-                        <div class="col-md-4 mb-3">
-                            <label for="validationCustom01">Name: </label>
-                            <input type="text" name='fName' th:field="*{name}" class="form-control" id="validationCustom01" placeholder="First name"
-                                 required>
-                        </div>
-                        
-                        <div class="col-md-4 mb-3">
-                            <label for="validationCustom01">Gender: </label>
-                            <input type="text" name='gender' th:field="*{gender}" class="form-control" id="validationCustom01" placeholder="User name"
-                                 required>
-                        </div>
-                        <div class="col-md-4 mb-3">
-                            <label for="validationCustom01">Email: </label>
-                            <input type="text" name='email' th:field="*{email}" class="form-control" id="validationCustom01" placeholder="Email"
-                                 required>
-                        </div>
-                        <div class="col-md-4 mb-3">
-                            <label for="validationCustom01">Position: </label>
-                            <input type="text" name='position' th:field="*{position}" class="form-control" id="validationCustom01" placeholder="Password"
-                                 required>
-                        </div>
-                        <div class="col-md-4 mb-3">
-                            <label for="validationCustom02">Phone</label>
-                            <input type="text" name='phone' th:field="*{phone}" class="form-control" id="validationCustom02" placeholder="Phone"
-                                 required>
-                        </div><br>
-                        <div class="col-md-4 mb-3">
-                            <label for="validationCustom03">Cover pic</label>
-                            <input type="file" name='image12' class="form-control" accept="image/png, image/jpeg, image/jpg" id="validationCustom03" placeholder="Cover image" >
-                        </div>
-                        
-                        
-                    </div>
+					<div class="col-md-9">
+						
+						<br>
+						<div class="row">
+							<div class="col-md-6">
+								<h3>Add Contact</h3>
+							</div>
+							
+						</div>
+						
+						<div class="list-group contact-group">
+						
+						
+						<form th:action="@{/addContact}" th:object="${newContact}" method="post" enctype="multipart/form-data">
+		                    <div class="form-row">
+		
+								<div class="col-md-4 mb-4">
+									<label>Name: </label><br> <input
+										type="text" name='fName' th:field="*{name}"
+										class="form-control" placeholder="First name" required>
+								</div>
+		
+								<div class="col-md-4 mb-3">
+		                            <label for="validationCustom01">Gender: </label>
+		                            <input type="text" name='gender' th:field="*{gender}" class="form-control" id="validationCustom01" placeholder="User name"
+		                                 required>
+		                        </div>
+		                        <div class="col-md-4 mb-3">
+		                            <label for="validationCustom01">Email: </label>
+		                            <input type="text" name='email' th:field="*{email}" class="form-control" id="validationCustom01" placeholder="Email"
+		                                 required>
+		                        </div><br><br><br><br>
+		                        <div class="col-md-4 mb-3">
+		                            <label for="validationCustom01">Position: </label>
+		                            <input type="text" name='position' th:field="*{position}" class="form-control" id="validationCustom01" placeholder="Password"
+		                                 required>
+		                        </div>
+		                        <div class="col-md-4 mb-3">
+		                            <label for="validationCustom02">Phone</label>
+		                            <input type="text" name='phone' th:field="*{phone}" class="form-control" id="validationCustom02" placeholder="Phone"
+		                                 required>
+		                        </div>
+		                        <div class="col-md-4 mb-3">
+		                            <label for="validationCustom03">Cover pic</label>
+		                            <input type="file" name='image12' class="form-control" accept="image/png, image/jpeg, image/jpg" id="validationCustom03" placeholder="Cover image" >
+		                        </div><br><br><br><br>
+		                        
+		                        
+		                        
+		                        <div class="col-md-10 mb-3">
+		                            <label for="validationCustom02">Address</label>
+		                            <textarea class="form-control" name='address' th:field="*{address}" id="exampleFormControlTextarea1" rows="3"></textarea>
+		                        </div>
+		
+		
+		                    	
+        					
+        						<div class='col-md-10 mb-3'><br><br>
+                    				<button type="submit" name="submit" class="btn btn-primary btn-lg">Submit</button>
+								</div>
+		                        
+		                        
+		                        
+		                    </div>
                     
-                    <div class='form-row'>
-                        
-                        <div class="col-md-10 mb-3">
-                            <label for="validationCustom02">Address</label>
-                            <textarea class="form-control" name='address' th:field="*{address}" id="exampleFormControlTextarea1" rows="3"></textarea>
-                        </div>
+		                    
+                		</form>
+						
+						
+												
+							
+																								
+						</div>
+						
+					</div>
+				</div>
+				
+			</div>
+		</div>
+	</div>
+	
+	
+	<!------ Include the above in your HEAD tag ---------->
 
-
-                    </div>
-        
-                    <button type="submit" name="submit" class="btn btn-primary">Submit</button>
-
-                </form>
-            </div>
-
-        </div>
-    </div><br><br><br><br>
-    
-    <!-- Footer -->
+	<!-- Footer -->
 	<section id="footer">
 		<div class="container">
 
@@ -202,7 +215,7 @@
 				<div
 					class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
 					<p class="h5">
-						Â© 2021 All right Reversed. <a class="text-green ml-2"
+						© 2021 All right Reversed. <a class="text-green ml-2"
 							href="https://github.com/Nawaz2000" target="_blank">Md. Nawaz
 							Rahaman</a>
 					</p>
@@ -212,6 +225,6 @@
 		</div>
 	</section>
 	<!-- ./Footer -->
-	
+
 </body>
 </html>
