--- a/src/main/resources/templates/add-contact.html
+++ b/src/main/resources/templates/add-contact.html
@@ -120,48 +120,48 @@
 		                    <div class="form-row">
 		
 								<div class="col-md-4 mb-4">
-									<label>Name: </label><br> <input
-										type="text" name='fName' th:field="*{name}"
-										class="form-control" placeholder="First name" required>
+									<label style="margin-top: 0.5em;">Name: </label><br>
+									<input style="margin-top: 0.2em; margin-bottom: 0.5em;" type="text" name='fName' th:field="*{name}" class="form-control" placeholder="First name" 
+									required>
 								</div>
 		
 								<div class="col-md-4 mb-3">
-		                            <label for="validationCustom01">Gender: </label>
-		                            <input type="text" name='gender' th:field="*{gender}" class="form-control" id="validationCustom01" placeholder="User name"
+		                            <label style="margin-top: 0.5em;" for="validationCustom01">Gender: </label>
+		                            <input style="margin-top: 0.2em; margin-bottom: 0.5em;" type="text" name='gender' th:field="*{gender}" class="form-control" id="validationCustom01" placeholder="User name"
 		                                 required>
 		                        </div>
 		                        <div class="col-md-4 mb-3">
-		                            <label for="validationCustom01">Email: </label>
-		                            <input type="text" name='email' th:field="*{email}" class="form-control" id="validationCustom01" placeholder="Email"
-		                                 required>
-		                        </div><br><br><br><br>
-		                        <div class="col-md-4 mb-3">
-		                            <label for="validationCustom01">Position: </label>
-		                            <input type="text" name='position' th:field="*{position}" class="form-control" id="validationCustom01" placeholder="Password"
+		                            <label style="margin-top: 0.5em;" for="validationCustom01">Email: </label>
+		                            <input style="margin-top: 0.2em; margin-bottom: 0.5em;" type="email" name='email' th:field="*{email}" class="form-control" id="validationCustom01" placeholder="Email"
 		                                 required>
 		                        </div>
 		                        <div class="col-md-4 mb-3">
-		                            <label for="validationCustom02">Phone</label>
-		                            <input type="text" name='phone' th:field="*{phone}" class="form-control" id="validationCustom02" placeholder="Phone"
+		                            <label style="margin-top: 0.5em;" for="validationCustom01">Position: </label>
+		                            <input style="margin-top: 0.2em; margin-bottom: 0.5em;" type="text" name='position' th:field="*{position}" class="form-control" id="validationCustom01" placeholder="Password"
 		                                 required>
 		                        </div>
 		                        <div class="col-md-4 mb-3">
-		                            <label for="validationCustom03">Cover pic</label>
-		                            <input type="file" name='image12' class="form-control" accept="image/png, image/jpeg, image/jpg" id="validationCustom03" placeholder="Cover image" >
-		                        </div><br><br><br><br>
+		                            <label style="margin-top: 0.5em;" for="validationCustom02">Phone:</label>
+		                            <input style="margin-top: 0.2em; margin-bottom: 0.5em;" type="tel" name='phone' th:field="*{phone}" class="form-control" id="validationCustom02" placeholder="Phone"
+		                                 required>
+		                        </div>
+		                        <div class="col-md-4 mb-3">
+		                            <label style="margin-top: 0.5em;" for="validationCustom03">Cover pic:</label>
+		                            <input style="margin-top: 0.2em; margin-bottom: 0.5em;" type="file" name='image12' class="form-control" accept="image/png, image/jpeg, image/jpg" id="validationCustom03" placeholder="Cover image" >
+		                        </div>
 		                        
 		                        
 		                        
 		                        <div class="col-md-10 mb-3">
-		                            <label for="validationCustom02">Address</label>
-		                            <textarea class="form-control" name='address' th:field="*{address}" id="exampleFormControlTextarea1" rows="3"></textarea>
+		                            <label style="margin-top: 0.5em;" for="validationCustom02">Address:</label>
+		                            <textarea style="margin-top: 0.2em; margin-bottom: 0.5em;" class="form-control" name='address' th:field="*{address}" id="exampleFormControlTextarea1" rows="3"></textarea>
 		                        </div>
 		
 		
 		                    	
         					
         						<div class='col-md-10 mb-3'><br><br>
-                    				<button type="submit" name="submit" class="btn btn-primary btn-lg">Submit</button>
+                    				<button style="margin-top: 0.5em; margin-bottom: 0.5em;" type="submit" name="submit" class="btn btn-primary btn-lg">Submit</button>
 								</div>
 		                        
 		                        
