registration page linked

--- a/src/main/resources/templates/add-contact.html
+++ b/src/main/resources/templates/add-contact.html
@@ -33,7 +33,7 @@
 						<h5 class="page-title"><b>Contacts</b></h5>
 						<ul class="nav nav-pills nav-stacked nav-contacts">
 							<li>
-								<a href="#">
+								<a th:href="@{/home}">
 									All Contacts
 									<span class="badge pull-right" th:text="${totalContacts}"></span>
 								</a>
