--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -35,7 +35,7 @@
 	
 	    <!-- Remind Passowrd -->
 	    <div id="formFooter">
-	      <a class="underlineHover" href="#">Forgot Password?</a>
+	      <a class="underlineHover" th:href="@{/login}">Back to login</a>
 	    </div>
 	
 	  </div>
