--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,9 +26,10 @@
 	      <input type="password" class="fadeIn third" name="password" placeholder="Password">
 	      <input type="submit" class="fadeIn fourth" value="Log In">
 	    </form>
-	
+	    
 	    <!-- Remind Passowrd -->
 	    <div id="formFooter">
+	      Do not have an account? <a class="underlineHover" th:href="@{/register}">Register here</a>
 	      <a class="underlineHover" href="#">Forgot Password?</a>
 	    </div>
 	
