--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -33,7 +33,7 @@
 						<h5 class="page-title"><b>Contacts</b></h5>
 						<ul class="nav nav-pills nav-stacked nav-contacts">
 							<li class="active">
-								<a th:href="@{/home}">
+								<a th:href="@{/addContact}">
 									All Contacts
 									<span class="badge pull-right" th:text="${totalContacts}"></span>
 								</a>
