update contact added

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -30,10 +30,10 @@
 			<div class="page-people-directory">
 				<div class="row">
 					<div class="col-md-3">
-						<h5 class="page-title"><b>Contacts</b></h5>
+						<h4 class="page-title"><b>Contacts</b></h4>
 						<ul class="nav nav-pills nav-stacked nav-contacts">
 							<li class="active">
-								<a th:href="@{/addContact}">
+								<a th:href="@{/home}">
 									All Contacts
 									<span class="badge pull-right" th:text="${totalContacts}"></span>
 								</a>
@@ -54,7 +54,7 @@
 						
 						<br>
 						
-						<h5><b>My Favorites</b></h5>
+						<h4><b>My Favorites</b></h4>
 						<div class="list-group people-group">
 							<a href="#" class="list-group-item">
 								<div class="media">
