--- a/src/main/resources/templates/update-contact.html
+++ b/src/main/resources/templates/update-contact.html
@@ -108,7 +108,7 @@
 						<br>
 						<div class="row">
 							<div class="col-md-6">
-								<h3>Add Contact</h3>
+								<h3>Update Contact</h3>
 							</div>
 							
 						</div>
@@ -116,45 +116,47 @@
 						<div class="list-group contact-group">
 						
 						
-						<form th:action="@{/addContact}" th:object="${newContact}" method="post" enctype="multipart/form-data">
+						<form th:action="@{/addContact}" th:object="${updateContact}" method="post" enctype="multipart/form-data">
 		                    <div class="form-row">
+		                    
+		                    	<input type="hidden" name="id" th:field="*{id}" th:value="*{id}">
 		
 								<div class="col-md-4 mb-4">
 									<label style="margin-top: 0.5em;">Name: </label><br>
-									<input style="margin-top: 0.2em; margin-bottom: 0.5em;" type="text" name='name' th:field="*{name}" class="form-control" placeholder="First name" 
+									<input style="margin-top: 0.2em; margin-bottom: 0.5em;" type="text" name='name' th:field="*{name}" class="form-control" th:value="${updateContact.name}" 
 									required>
 								</div>
 		
 								<div class="col-md-4 mb-3">
 		                            <label style="margin-top: 0.5em;" for="validationCustom01">Gender: </label>
-		                            <input style="margin-top: 0.2em; margin-bottom: 0.5em;" type="text" name='gender' th:field="*{gender}" class="form-control" id="validationCustom01" placeholder="Gender"
+		                            <input style="margin-top: 0.2em; margin-bottom: 0.5em;" type="text" name='gender' th:field="*{gender}" class="form-control" id="validationCustom01" th:value="${updateContact.gender}"
 		                                 required>
 		                        </div>
 		                        <div class="col-md-4 mb-3">
 		                            <label style="margin-top: 0.5em;" for="validationCustom01">Email: </label>
-		                            <input style="margin-top: 0.2em; margin-bottom: 0.5em;" type="email" name='email' th:field="*{email}" class="form-control" id="validationCustom01" placeholder="Email"
+		                            <input style="margin-top: 0.2em; margin-bottom: 0.5em;" type="email" name='email' th:field="*{email}" class="form-control" id="validationCustom01" th:value="${updateContact.email}"
 		                                 required>
 		                        </div>
 		                        <div class="col-md-4 mb-3">
 		                            <label style="margin-top: 0.5em;" for="validationCustom01">Position: </label>
-		                            <input style="margin-top: 0.2em; margin-bottom: 0.5em;" type="text" name='position' th:field="*{position}" class="form-control" id="validationCustom01" placeholder="Password"
+		                            <input style="margin-top: 0.2em; margin-bottom: 0.5em;" type="text" name='position' th:field="*{position}" class="form-control" id="validationCustom01" th:value="${updateContact.position}"
 		                                 required>
 		                        </div>
 		                        <div class="col-md-4 mb-3">
 		                            <label style="margin-top: 0.5em;" for="validationCustom02">Phone:</label>
-		                            <input style="margin-top: 0.2em; margin-bottom: 0.5em;" type="tel" name='phone' th:field="*{phone}" class="form-control" id="validationCustom02" placeholder="Phone"
+		                            <input style="margin-top: 0.2em; margin-bottom: 0.5em;" type="tel" name='phone' th:field="*{phone}" class="form-control" id="validationCustom02" th:value="${updateContact.phone}"
 		                                 required>
 		                        </div>
 		                        <div class="col-md-4 mb-3">
 		                            <label style="margin-top: 0.5em;" for="validationCustom03">Cover pic:</label>
-		                            <input style="margin-top: 0.2em; margin-bottom: 0.5em;" type="file" name='image12' class="form-control" accept="image/png, image/jpeg, image/jpg" id="validationCustom03" placeholder="Cover image" >
+		                            <input style="margin-top: 0.2em; margin-bottom: 0.5em;" type="file" name='image12' class="form-control" accept="image/png, image/jpeg, image/jpg" id="validationCustom03" th:value="${updateContact.image}" >
 		                        </div>
 		                        
 		                        
 		                        
 		                        <div class="col-md-10 mb-3">
 		                            <label style="margin-top: 0.5em;" for="validationCustom02">Address:</label>
-		                            <textarea style="margin-top: 0.2em; margin-bottom: 0.5em;" class="form-control" name='address' th:field="*{address}" id="exampleFormControlTextarea1" rows="3"></textarea>
+		                            <textarea style="margin-top: 0.2em; margin-bottom: 0.5em;" class="form-control" name='address' th:value="${updateContact.address}" th:field="*{address}" id="exampleFormControlTextarea1" rows="3"></textarea>
 		                        </div>
 		
 		
