--- a/src/main/resources/templates/search-results.html
+++ b/src/main/resources/templates/search-results.html
@@ -121,7 +121,7 @@
 						<br>
 						<div class="row">
 							<div class="col-md-6">
-								<h3>All Contacts</h3>
+								<h3>Search results</h3>
 							</div>
 							
 						</div>
@@ -129,7 +129,7 @@
 						<div class="list-group contact-group">
 						
 						
-						<tr th:each="contact: ${allContacts}">
+						<tr th:each="contact: ${searchResults}">
 							<div class="list-group">
 								<div href="#" class="list-group-item">
 									<div class="media">
